# EdTech-Personal-Tutor-agent

./: .env.example  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
src/agent/chains/: tutor_chain.py
src/agent/llm/: llm_provider.py
src/agent/memory/: conversation_memory.py  student_memory.py python
src/agent/retrieval/: compressor.py  embeddings.py  multi_query.py  qdrant_client.py  rag_pipeline.py
src/agent/tools/: code_executor.py  progress_tracker.py  quiz_generator.py
src/api/: error_handler.py  logging_middleware.py  main.py
src/api/routes/: chat.py  health.py  progress.py  quiz.py
src/core/: config.py  exceptions.py  logging.py  metrics.py
src/core/guards/: input_validator.py  rate_limiter.py
tests/e2e/: test_chat_flow.py
tests/integration/: test_rag_pipeline.py
tests/unit/: input_validator.py
